--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -1,10 +1,17 @@
 <h1>Create a Song</h1>
 
 <%= form_for @song  do |f| %>
-  <%= f.label :title %>
-  <%= f.text_field :title %>
-  <br />
+  <p><%= f.label :title %>
+  <%= f.text_field :title %></p>
 
+  <p><%= f.label :artist_name %>
+  <%= f.text_field :artist_name %></p>
+
+  <p>Genre: <%= f.collection_select :genre_id, Genre.all, :id, :name %></p>
+  
+  <p>Note 1: <%= text_field_tag :song_notes_1 %></p>
+  <p>Note 2: <%= text_field_tag :song_notes_2 %></p>
+  
   <%= f.submit %>
 <% end %>
 
