--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -5,7 +5,16 @@
   <%= f.text_field :title %>
   <br />
 
-  <%= f.submit %>
+  <%= f.label :artist_name %>
+  <%= f.text_field :artist_name %>
+  <br />
+
+  Genre: <%= f.collection_select :genre_id, Genre.all, :id, :name %>
+  
+  Note 1: <%= text_field_tag :song_notes_1 %>
+  Note 2: <%= text_field_tag :song_notes_2 %>
+
+<br><%= f.submit %>
 <% end %>
 
 
