--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -1,12 +1,11 @@
 <h1>Create a Song</h1>
 
-<%= form_for @song  do |f| %>
-  <div>
-    <%= f.label :title %>
-    <%= f.text_field :title %>
-    <%= f.text_field :artist_name %>
-    <%= f.text_field :genre_name %>
-    <%= f.text_field :note_contents %>
-    <%= f.submit %>
-  </div>
+<%= form_for @song do |f| %>
+  <%= f.text_field :title %>
+  <%= f.text_field :artist_name %>
+  <%= f.collection_select :genre_id, Genre.all, :id, :name %>
+  <input name='song[note_contents][]' id='song_notes_1'>
+  <input name='song[note_contents][]' id='song_notes_2'>
+  <input name='song[note_contents][]' id='song_notes_3'>
+  <%= f.submit %>
 <% end %>
